--- a/Views/Interface/SuccessStoryAchievementsList.xaml
+++ b/Views/Interface/SuccessStoryAchievementsList.xaml
@@ -96,6 +96,9 @@
                             <Image.OpacityMask>
                                 <ImageBrush ImageSource="{Binding IconImage}" />
                             </Image.OpacityMask>
+                            <Image.Effect>
+                                <DropShadowEffect BlurRadius="30" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}"/>
+                            </Image.Effect>
                         </Image>
                     </StackPanel>
 
