--- a/Localization/LocSource.xaml
+++ b/Localization/LocSource.xaml
@@ -36,7 +36,7 @@
 
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Show separate view for RetroAchievements achievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryDatabase">Achievements database</sys:String>
+    <sys:String x:Key="LOCSuccessStoryDatabase">Database</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Download achievements data</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Reset achievements data</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Download missing data</sys:String>
